# qphelper

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: dense.md  index.md  ocp.md  qp.md
docs/css/: style.css
src/qp_utils/: __init__.py
src/qphelper/: __init__.py  qp.py  qp_ocp.py
src/qputils/: qp.py  qp_dense.py  qp_ocp.py
tests/: test_dense_qp.py  test_qp.py
