[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "qphelper"
version = "0.0.1"
authors = [
  { name="Jiří Gallo", email="jiri.gallo@centrum.cz" },
]
description = "Utilities for Quadratic Programming"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
  "numpy",
]

[project.urls]
Homepage = "https://github.com/galloj/qphelper"
Issues = "https://github.com/galloj/qphelper/issues"
Documentation = "https://qphelper.readthedocs.io/en/latest/"